# synheart-sensor-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SYNHEART_FLUX_INTEGRATION.md  rustfmt.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: capture_demo.rs
src/: config.rs  gateway.rs  lib.rs  main.rs  server.rs
src/collector/: macos.rs  mod.rs  noop.rs  types.rs  windows.rs
src/core/: features.rs  hsi.rs  mod.rs  windowing.rs
src/flux/: adapter.rs  mod.rs  processor.rs
src/transparency/: log.rs  mod.rs
tests/: server_test.rs
