[package]
name = "synheart-sensor-agent"
version = "0.1.0"
edition = "2021"
description = "Privacy-first PC background sensor for behavioral research"
license = "Apache-2.0"
repository = "https://github.com/synheart-ai/synheart-sensor-agent"
rust-version = "1.70"

[[bin]]
name = "synheart-sensor"
path = "src/main.rs"

[features]
default = []
flux = ["synheart-flux"]
gateway = ["reqwest"]
server = ["axum", "tower-http", "flux", "gateway", "tracing", "tracing-subscriber", "anyhow"]

[dependencies]
# macOS event capture
core-graphics = "0.25"
core-foundation = "0.10"

# Synheart Flux for baseline tracking and HSI enrichment (optional)

synheart-flux = { git = "https://github.com/synheart-ai/synheart-flux", optional = true }
# HTTP client for gateway sync (optional)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false, optional = true }

# HTTP server for receiving behavioral data (optional)
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
anyhow = { version = "1.0", optional = true }

# Hostname detection for device ID
hostname = "0.4"

# Timezone support
chrono-tz = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Unique identifiers
uuid = { version = "1.6", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Cross-thread communication
crossbeam-channel = "0.5"

# Statistics
statrs = "0.18"

# Directories for config/data storage
dirs = "6.0"

# Signal handling
ctrlc = "3.4"

[[example]]
name = "capture_demo"
path = "examples/capture_demo.rs"
